<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity">

    <TextView
        android:id="@+id/TV_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="@color/DefaultBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_titulo"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/TV_description"
        android:layout_width="353dp"
        android:layout_height="29dp"
        android:text="@string/order_resume"

        android:textAlignment="center"
        android:textColor="@color/backgroundEditText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_greeting"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/TV_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_name"
        android:textAlignment="center"
        android:textColor="@color/DefaultBlue"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_description"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/TV_1flight_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flightdetails1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_name"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/TVhora_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horayfecha"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_1flight_details"
        app:layout_constraintVertical_bias="0.025" />
    <TextView
        android:id="@+id/TV_asientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asientos"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVhora_fecha"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/TV_2flightdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flightdetails2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_asientos"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/TV_horayfecha_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horayfecha2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_2flightdetails"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/TV_asientos2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asientos2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_horayfecha_des"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/TV_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_asientos2"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/TV_monto_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto_des_ad"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_monto"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/TV_monto_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto_final"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_monto_des"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/TV_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_aviso"
        android:textAlignment="center"
        android:textColor="@color/DefaultBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_monto_final"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>