<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ET_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input_et"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_titulo"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/ET_last_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:drawableStart="@drawable/ic_persons"
        android:drawablePadding="12dp"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_name"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout_destino"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/DefaultBlue"
        app:cursorColor="@color/DefaultBlue"
        app:endIconMode="dropdown_menu"
        app:hintTextColor="@color/DefaultBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout_origen"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent="0.9"
        app:startIconTint="@color/DefaultBlue">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_destino"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_landing"
            android:drawablePadding="12dp"
            android:hint="@string/destino"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/backgroundEditText"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout_origen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/DefaultBlue"
        app:cursorColor="@color/DefaultBlue"
        app:endIconMode="dropdown_menu"
        app:hintTextColor="@color/DefaultBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_last_name"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.9"
        app:startIconTint="@color/DefaultBlue">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_origen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_takingoff"
            android:drawablePadding="12dp"
            android:hint="@string/origen"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/backgroundEditText"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout_hora"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/DefaultBlue"
        app:cursorColor="@color/DefaultBlue"
        app:endIconMode="dropdown_menu"
        app:hintTextColor="@color/DefaultBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_date"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent="0.9"
        app:startIconTint="@color/DefaultBlue">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_hora"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="12dp"
            android:hint="@string/hora"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/backgroundEditText"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ET_date"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:clickable="false"
        android:drawableStart="@drawable/ic_calendar_2"
        android:drawablePadding="12dp"
        android:hint="@string/fecha_de_salida"
        android:ems="10"
        android:focusable="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout_destino"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintVertical_bias="0.04"
         />

    <EditText
        android:id="@+id/ET_date_back"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:clickable="false"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/fecha_de_regreso"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout_hora"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_layout_hora2"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/TV_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/VT_welcome"
        android:textColor="@color/DefaultBlue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ET_viajerofrecuente"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input_et"
        android:drawableStart="@drawable/ic_travel"
        android:drawablePadding="12dp"
        android:hint="@string/id_viajero"
        android:inputType="number"
        android:maxLength="8"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/backgroundEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_email"
        app:layout_constraintVertical_bias="0.110000014"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:enabled="false"
        android:id="@+id/button_verificar"
        android:layout_width="187dp"
        android:layout_height="61dp"
        android:text="@string/btn_reservar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_viajerofrecuente" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout_hora2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="0dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/DefaultBlue"
        app:cursorColor="@color/DefaultBlue"
        app:endIconMode="dropdown_menu"
        app:hintTextColor="@color/DefaultBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_date_back"
        app:layout_constraintVertical_bias="0.025"
        app:layout_constraintWidth_percent="0.9"
        app:startIconTint="@color/DefaultBlue">

        <AutoCompleteTextView
            android:id="@+id/dropdown_menu_hora2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="12dp"
            android:hint="@string/hora2"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/backgroundEditText"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>