<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcome"
        android:textColor="@color/DefaultBlue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

    <TextView
        android:id="@+id/aerolinea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="@color/DefaultBlue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="321dp"
        android:layout_height="119dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aerolinea"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/button_iniciar"
        android:layout_width="187dp"
        android:layout_height="61dp"
        android:text="@string/btn_iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miImagen" />

    <ImageView
        android:id="@+id/lineas"
        android:layout_width="1195dp"
        android:layout_height="334dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="65dp"
        android:rotation="43"
        android:src="@drawable/lines"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miImagen"
        app:tint="@color/DefaultBlue" />

    <ImageView
        android:id="@+id/lineasup"
        android:layout_width="1195dp"
        android:layout_height="334dp"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="-300dp"
        android:layout_marginBottom="87dp"
        android:rotation="43"
        android:src="@drawable/lines"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/aerolinea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/DefaultBlue" />


</androidx.constraintlayout.widget.ConstraintLayout>